--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="author" content="Enrique Novoa">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Binary Search Tree</title>
+    <title>JS Algorithm - Problem Solving</title>
 
 
     <!-- Latest compiled and minified CSS -->
